overflow fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -111,7 +111,6 @@ p {
 
 .layout-grid > main {
   grid-area: main;
-  overflow-y: auto; /* if content scrolls */
   min-height: 0; /* Important for grid overflow */
 }
 
